[gd_scene load_steps=2 format=3 uid="uid://bsw5kqyp62apg"]

[ext_resource type="Script" path="res://scripts/number_condition_input.gd" id="1_x74b3"]

[node name="NumberConditionInput" type="LineEdit"]
placeholder_text = "Amount(s)"
expand_to_text_length = true
script = ExtResource("1_x74b3")

[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="text_submitted" from="." to="." method="_on_text_submitted"]
